# cargo-nix-plugin

./: .gitignore  README.md  flake.nix
cpp/: CMakeLists.txt  plugin.cc
lib/: default.nix
nix/: eval-test.nix  plugin.nix
openspec/changes/auto-cargo-metadata/: design.md  proposal.md  tasks.md
openspec/changes/auto-cargo-metadata/specs/auto-cargo-metadata/: spec.md
openspec/changes/auto-cargo-metadata/specs/cargo-workspace-resolver/: spec.md
openspec/changes/auto-cargo-metadata/specs/nix-buildrust-wrapper/: spec.md
openspec/changes/cargo-nix-plugin/: design.md  proposal.md  tasks.md
openspec/changes/cargo-nix-plugin/specs/cargo-workspace-resolver/: spec.md
openspec/changes/cargo-nix-plugin/specs/nix-buildrust-wrapper/: spec.md
rust/: Cargo.toml
rust/src/: cfg_eval.rs  feature_resolve.rs  ffi.rs  lib.rs  lockfile.rs  nix_builder.rs  nix_val.rs  resolve.rs
tests/: benchmark.nix  chroot-store-test.nix  eval-test.nix  sample-build-test.nix  torture-test.nix
tests/sample-project/: Cargo.toml  metadata.json
tests/sample-project/sample-lib/: Cargo.toml
tests/sample-project/sample-lib/src/: lib.rs
tests/sample-project/src/: main.rs
