[package]
name = "cargo-nix-plugin-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cargo_metadata = "0.23"
cargo-platform = "0.3"
toml = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
nix-bindings-expr-sys = "0.2"
nix-bindings-store-sys = "0.2"
nix-bindings-util-sys = "0.2"
